--- a/Subket Peer/.project
+++ b/Subket Peer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Subket Pair</name>
+	<name>Subket Peer</name>
 	<comment></comment>
 	<projects>
 	</projects>
